arreglos y asi xd

--- a/webapp/templates/header.html
+++ b/webapp/templates/header.html
@@ -13,7 +13,7 @@
             <div class="row g-0 text-center d-flex justify-content-center align-items-center">
                 <div class="col-12 col-md-2 order-md-1 mb-md-0">
                     <div class="header-image">
-                        <img src="../../assets/img/LogoUAEMBlanco.png" alt="UAEM - Universidad - Morelos" class="img-fluid">
+                        <img src="../../assets/img/LogoUAEMBlanco.png" alt="UAEM" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-12 col-md-8 order-md-2">
