--- a/webapp/assets/css/login.css
+++ b/webapp/assets/css/login.css
@@ -1,8 +1,4 @@
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 
 #container {
     display: flex;
@@ -67,13 +63,6 @@ body, html {
     position: relative;
 }
 
-/* Ajustar los inputs a un tamaño más delgado */
-.input-thin {
-    padding: 8px; /* Ajusta el padding según sea necesario */
-    font-size: 0.6rem; /* Ajusta el tamaño de la fuente */
-    height: 30px; /* Ajusta la altura */
-}
-
 .btn {
     width: 80%; /* Ajusta el porcentaje según sea necesario */
     padding: 10px;
@@ -110,11 +99,12 @@ body, html {
     border: none;
     cursor: pointer;
     padding: 0;
-    width: 50px; /* Ajusta el tamaño del botón */
-    height: 50px; /* Ajusta el tamaño del botón */
+    width: 25px; /* Ajusta el tamaño del botón */
+    height: 25px; /* Ajusta el tamaño del botón */
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 80px;
 }
 
 .password-btn img {
@@ -129,4 +119,106 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+.input-field {
+    position: relative;
+    padding: 10px;
+  }
+  
+  .input-field label {
+    position: absolute;
+    color: #8d8d8d;
+    pointer-events: none;
+    background-color: transparent;
+    left: 15px;
+    transform: translateY(0.6rem);
+    transition: all 0.3s ease;
+  }
+  
+  .input-field input {
+    padding: 10px 15px;
+    font-size: 1rem;
+    border-radius: 8px;
+    border: solid 1px #8d8d8d;
+    letter-spacing: 1px;
+    width: 100%;
+  }
+  
+  .input-field input:focus,
+  .input-field input:valid {
+    outline: none;
+    border: solid 1px #0034de;
+  }
+  
+  .input-field input:focus ~ label,
+  .input-field input:valid ~ label {
+    transform: translateY(-51%) translateX(-10px) scale(0.8);
+    background-color: #fff;
+    padding: 0px 5px;
+    color: #0034de;
+    font-weight: bold;
+    letter-spacing: 1px;
+    border: none;
+    border-radius: 100px;
+  }
+
+  button {
+  --primary-color: #645bff;
+  --secondary-color: #fff;
+  --hover-color: #111;
+  --arrow-width: 10px;
+  --arrow-stroke: 2px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 20px;
+  color: var(--secondary-color);
+  padding: 1em 1.8em;
+  background: var(--primary-color);
+  display: flex;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
+}
+
+button .arrow-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button .arrow {
+  margin-top: 1px;
+  width: var(--arrow-width);
+  background: var(--primary-color);
+  height: var(--arrow-stroke);
+  position: relative;
+  transition: 0.2s;
+}
+
+button .arrow::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  border: solid var(--secondary-color);
+  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+  display: inline-block;
+  top: -3px;
+  right: 3px;
+  transition: 0.2s;
+  padding: 3px;
+  transform: rotate(-45deg);
+}
+
+button:hover {
+  background-color: var(--hover-color);
+}
+
+button:hover .arrow {
+  background: var(--secondary-color);
+}
+
+button:hover .arrow:before {
+  right: 0;
 }
