--- a/webapp/assets/css/registro.css
+++ b/webapp/assets/css/registro.css
@@ -1,3 +1,30 @@
+.contenido {
+    padding: 2rem;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+    
+    .contenido .heading {
+      font-size: 1.3rem;
+      margin-bottom: 20px;
+      font-weight: bolder;
+    }
+
+    .titulos{
+        padding: 20px;
+        align-items: center;
+        justify-content: center;
+      }
+      
+    .line {
+        width: 100%;
+        height: 1px;
+        margin-top: 20px;
+        border: 1px #696969 solid;
+    }
 /* Estilos para la card */
 .form-container {
     max-width: 500px; /* Asegura un ancho máximo */
@@ -152,4 +179,68 @@
 
 .toggle-input:checked ~ .password-card {
     display: flex;
+}
+
+
+/*formulario*/
+/* Estilos para la card */
+.form-container {
+    max-width: 500px; /* Asegura un ancho máximo */
+    width: 100%; /* Ocupa todo el ancho disponible en pantallas más pequeñas */
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    box-sizing: border-box;
+    overflow: hidden;
+    padding: 20px; /* Añade relleno */
+    margin: 15px; /* Margen para separación en dispositivos móviles */
+}
+
+.input-field {
+    position: relative;
+    margin-top: 8px;
+    width: 100%;
+}
+  
+.input-field label {
+    position: absolute;
+    color: #8d8d8d;
+    pointer-events: none;
+    background-color: transparent;
+    left: 15px;
+    transform: translateY(0.6rem);
+    transition: all 0.3s ease;
+}
+  
+.input-field input,
+.input-field select {
+    padding: 10px 15px;
+    font-size: 1rem;
+    border-radius: 8px;
+    border: solid 1px #8d8d8d;
+    letter-spacing: 1px;
+    width: 100%;
+}
+  
+.input-field input:focus,
+.input-field input:valid,
+.input-field select:focus,
+.input-field select:valid {
+    outline: none;
+    border: solid 1px #001660;
+}
+  
+.input-field input:focus ~ label,
+.input-field input:valid ~ label,
+.input-field select:focus ~ label,
+.input-field select:valid ~ label {
+    transform: translateY(-51%) translateX(-10px) scale(0.8);
+    background-color: #fff;
+    padding: 0px 5px;
+    color: #0034de;
+    font-weight: bold;
+    letter-spacing: 1px;
+    border: none;
+    border-radius: 100px;
 }
