para que ya no se vean los link

--- a/webapp/templates/footer.html
+++ b/webapp/templates/footer.html
@@ -4,31 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
-<<<<<<< HEAD
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            margin: 0;
-        }
-        .footer {
-            background-color: rgb(8, 8, 145);
-            color: white;
-            text-align: center;
-            padding: 10px;
-            margin-top: auto;
-        }
-    </style>
-=======
-    <link rel="stylesheet" href="./../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./../assets/css/styles.css">
->>>>>>> 931ad59ebc368b37d38d5224f83130867f37740c
+    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/styles.css">
 </head>
-<body>    
-    <footer class="footer">
-        <p>Departamento de Formación Docente</p>
-        <p>Av. Universidad 1001 Col. Chamilpa C.P. 62209, Cuernavaca, Morelos</p>
+<body>
+    <footer>
+        <div class="footer">
+            <p>Departamento de Formación Docente</p>
+            <p>Av. Universidad 1001 Col. Chamilpa C.P. 62209, Cuernavaca, Morelos</p>
+        </div>
     </footer>
 </body>
 </html>
