--- a/webapp/templates/menu.html
+++ b/webapp/templates/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
-    <link rel="stylesheet" href="./../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/bootstrap.min.css">
 </head>
 <style>
 /*===== NAVEGACIÓN VERTICAL =====*/
@@ -82,6 +82,6 @@ li a:hover {
         </ul>
     </div>
     
-    <script src="./../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/SIGEFO/webapp/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
