--- a/webapp/templates/footerPublico.html
+++ b/webapp/templates/footerPublico.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
-    <link rel="stylesheet" href="./../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./../assets/css/styles.css">
-    <link rel="stylesheet" href="./../assets/css/custom.css">
+    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/styles.css">
+    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/custom.css">
 </head>
 <body>
     <footer class="bg-custom-footer py-1">
@@ -15,24 +15,24 @@
                 <div class="col-12 col-md-6 d-flex flex-column align-items-center align-items-md-center mb-3 mb-md-0 follow-us">
                     <h5 class="text-center text-md-end">¡Síguenos en nuestras redes sociales!</h5>
                     <div class="d-flex justify-content-center justify-content-md-end follow-us">
-                        <a href="mailto:eval_docente@uaem.mx" class="text-white me-2"><img src="./../assets/img/correo.png" alt="Correo" class="img-fluid"></a>
-                        <a href="https://www.facebook.com/uaemformaciondocente" class="text-white me-2"><img src="./../assets/img/facebook.png" alt="Facebook" class="img-fluid"></a>
-                        <a href="https://www.youtube.com/channel/UCvc3SSAArfY-DsWXXZ4mwhg" class="text-white"><img src="./../assets/img/youtube.png" alt="YouTube" class="img-fluid"></a>
+                        <a href="mailto:eval_docente@uaem.mx" class="text-white me-2"><img src="/SIGEFO/webapp/assets/img/correo.png" alt="Correo" class="img-fluid"></a>
+                        <a href="https://www.facebook.com/uaemformaciondocente" class="text-white me-2"><img src="/SIGEFO/webapp/assets/img/facebook.png" alt="Facebook" class="img-fluid"></a>
+                        <a href="https://www.youtube.com/channel/UCvc3SSAArfY-DsWXXZ4mwhg" class="text-white"><img src="/SIGEFO/webapp/assets/img/youtube.png" alt="YouTube" class="img-fluid"></a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 text-center text-md-center">
                     <div class="mb-3">
                         <h5>Universidad Autónoma del Estado de Morelos</h5>
                         <p>Departamento de Formación Docente</p>
-                        <p><img src="./../assets/img/mapas-y-banderas.png" alt="ubicacion" class="img-fluid" style="height: 17px;"> Av. Universidad 1001, Chamilpa, Cuernavaca, Morelos, México</p>
-                        <p><img src="./../assets/img/llamada-telefonica.png" alt="YouTube" class="img-fluid" style="height: 17px;"> (777) 329 70 00 Ext. 3249, 3352 y 3935</p>
-                        <p><img src="./../assets/img/correo-electronico.png" alt="YouTube" class="img-fluid" style="height: 17px;"> eval_docente@uaem.mx</p>
+                        <p><img src="/SIGEFO/webapp/assets/img/mapas-y-banderas.png" alt="ubicacion" class="img-fluid" style="height: 17px;"> Av. Universidad 1001, Chamilpa, Cuernavaca, Morelos, México</p>
+                        <p><img src="/SIGEFO/webapp/assets/img/llamada-telefonica.png" alt="YouTube" class="img-fluid" style="height: 17px;"> (777) 329 70 00 Ext. 3249, 3352 y 3935</p>
+                        <p><img src="/SIGEFO/webapp/assets/img/correo-electronico.png" alt="YouTube" class="img-fluid" style="height: 17px;"> eval_docente@uaem.mx</p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
     
-    <script src="./../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/SIGEFO/webapp/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
