--- a/webapp/assets/css/formaciondocente.css
+++ b/webapp/assets/css/formaciondocente.css
@@ -1,16 +1,113 @@
-.card-body{
+.dropdownmenu ul, .dropdownmenu li {
+    margin: 0;
+    padding: 0;
+}
+.dropdownmenu ul {
+    background: gray;
+    list-style: none;
+    width: 100%;
+}
+.dropdownmenu li {
+    float: left;
+    position: relative;
+    width: auto;
+}
+.dropdownmenu a {
+    background: #001660;
+    color: #FFFFFF;
+    display: block;
+    font: bold 12px/20px sans-serif;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    -webkit-transition: all .25s ease;
+    -moz-transition: all .25s ease;
+    -ms-transition: all .25s ease;
+    -o-transition: all .25s ease;
+    transition: all .25s ease;
+}
+.dropdownmenu li:hover a {
+    background: #ffffff;
+    color: #000000;
+}
+#submenu {
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 35px;
+    visibility: hidden;
+    z-index: 1;
+
+}
+li:hover ul#submenu {
+    opacity: 1;
+    top: 40px;
+    visibility: visible;
+}
+#submenu li {
+    float: none;
+    width: 100%;
+}
+#submenu a:hover {
+    background: #001660;
+    color: #ffffff;
+}
+#submenu a {
+    background-color: #ffffff;
+}
+
+/* CARD */
+.card-custom {
+    border: 1px solid #d1d1d1;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    transition: transform 0.2s;
+    height: auto;
+    width: 40%; /* Ancho de la card */
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.card-custom:hover {
+    transform: scale(1.05);
+}
+
+.card-header-custom {
+    background-color: #f5f5f5;
+    text-align: center;
+    font-size: 0.9rem;
+    padding: 15px;
+}
+
+.card-body-custom {
+    text-align: center;
     padding: 20px;
 }
 
-.card{
-margin-top: 80px;
+.card-body-custom h5 {
+    margin-bottom: 10px;
 }
 
-.card-text{
-    margin-top: 20px;
-    font-weight: bold;
+.card-body-custom h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
 }
 
-.btn{
-    margin-top: 20px;
+.card-footer-custom {
+    background-color: #0056b3;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+.btn-custom {
+    background-color: #0056b3;
+    color: white;
+    width: 100%;
+    border: none;
+}
+
+.btn-custom:hover {
+    background-color: #003d80;
 }
