--- a/webapp/templates/header.html
+++ b/webapp/templates/header.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
-    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/SIGEFO/webapp/assets/css/styles.css">
+    <link rel="stylesheet" href="/../webapp/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../webapp/assets/css/styles.css">
 </head>
 <body>
     <header class="bg-blue py-3">
@@ -13,7 +13,7 @@
             <div class="row g-0 text-center d-flex justify-content-center align-items-center">
                 <div class="col-12 col-md-2 order-md-1 mb-md-0">
                     <div class="header-image">
-                        <img src="/SIGEFO/webapp/assets/img/LogoUAEMBlanco.png" alt="UAEM" class="img-fluid">
+                        <img src="/../webapp/assets/img/LogoUAEMBlanco.png" alt="UAEM" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-12 col-md-8 order-md-2">
@@ -25,13 +25,13 @@
                 </div>
                 <div class="col-12 col-md-2 order-md-3">
                     <div class="header-image">
-                        <img src="/SIGEFO/webapp/assets/img/TextoLogoUAEMBlanco.png" alt="UAEM" class="img-fluid">
+                        <img src="/../webapp/assets/img/TextoLogoUAEMBlanco.png" alt="UAEM" class="img-fluid">
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <script src="/SIGEFO/webapp/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/../webapp/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
