--- a/webapp/assets/css/ActividadFormativa.css
+++ b/webapp/assets/css/ActividadFormativa.css
@@ -77,7 +77,7 @@ p {
 .activity,
 .management {
   text-align: center;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 22px;
   font-family: Inter, sans-serif;
   font-weight: 700;
