--- a/webapp/assets/css/styles.css
+++ b/webapp/assets/css/styles.css
@@ -54,7 +54,7 @@ body {
 }
 
 /* Cambia el color del enlace al pasar el cursor sobre él */
-.bg-custom-footer a:hover {
+.sm-custom-footer a:hover {
   color: #cccccc;
 }
 
