--- a/webapp/assets/css/consultas.css
+++ b/webapp/assets/css/consultas.css
@@ -3,15 +3,133 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 30vh;
+    
+    width: 90%;
     margin-top: 20px; /* Ajusta este valor para mover el contenido más hacia abajo */
+    margin-bottom: 25px;
     position: relative;
 }
 
-.titulo {
+.tittle {
     font-size: 50px;
     font-weight: bold;
-    margin-bottom: 10px; /* Espacio entre el título y la línea */
+    margin-bottom: 35px; 
+    margin-bottom: 35px;
+}
+
+.select-margin {
+    margin-bottom: 50px; /* Ajusta este valor según sea necesario */
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    margin-top: 50px;
+}
+
+.form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25);
+}
+
+.form-control::placeholder {
+    color: #6c757d;
+    opacity: 1;
+}
+
+.form-control:disabled, .form-control[readonly] {
+    background-color: #e9ecef;
+    opacity: 1;
+}
+
+
+.radio-input input {
+    display: none;
+}
+
+.radio-input {
+    --container_width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    color: #ffffff;
+    width: var(--container_width);
+    overflow: hidden;
+    border: 1px solid rgba(53, 52, 52, 0.226);
+    height: 100%;
+    background-color: #003366;
+}
+
+.radio-input label {
+    width: 100%;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    font-weight: 600;
+    letter-spacing: -1px;
+    font-size: 16px;
+}
+
+.selection {
+    display: none;
+    position: absolute;
+    height: 100%;
+    width: calc(var(--container_width) / 5);
+    z-index: 0;
+    left: 0;
+    top: 0;
+    transition: .15s ease;
+    background-color: rgb(5, 67, 129);
+}
+
+.radio-input label:has(input:checked) {
+    color: #000000;
+    background-color: rgb(255, 255, 255);
+}
+
+.radio-input label:has(input:checked) ~ .selection {
+    background-color: rgb(5, 67, 129);
+    display: inline-block;
+    height: 100%; /* Asegúrate de que la altura sea del 100% */
+    width: calc(var(--container_width) / 5);
+}
+
+.radio-input label:nth-child(1):has(input:checked) ~ .selection {
+    transform: translateX(calc(var(--container_width) * 0 / 5));
+}
+
+.radio-input label:nth-child(2):has(input:checked) ~ .selection {
+    transform: translateX(calc(var(--container_width) * 1 / 5));
+}
+
+.radio-input label:nth-child(3):has(input:checked) ~ .selection {
+    transform: translateX(calc(var(--container_width) * 2 / 5));
+}
+
+.radio-input label:nth-child(4):has(input:checked) ~ .selection {
+    transform: translateX(calc(var(--container_width) * 3 / 5));
+}
+
+.radio-input label:nth-child(5):has(input:checked) ~ .selection {
+    transform: translateX(calc(var(--container_width) * 4 / 5));
 }
 
 /* Estilos para el campo de búsqueda */
@@ -26,21 +144,19 @@
     border-radius: 10px;
     transition: all 0.5s;
     margin-right: 75%;
-  }
-  
-  .input:hover,
-  .input:focus {
+}
+
+.input:hover,
+.input:focus {
     border: 2px solid #4A9DEC;
     box-shadow: 0px 0px 0px 7px rgb(74, 157, 236, 20%);
-    background-color: white;
-  }
-  
+}
 
 .divider-line {
     width: 100%;
     height: 2px;
     background: #aaa9a9;
-    margin-bottom: 20px; 
+    margin-bottom: 40px;
     margin-top: 40px;
 }
 
@@ -61,10 +177,8 @@
 
 .btn-group button.active {
     background-color: #003366;
-    color: white;
+    color: rgb(255, 255, 255);
 }
-
-
 
 footer.footer {
     position: absolute;
