--- a/webapp/assets/css/formaciondocente.css
+++ b/webapp/assets/css/formaciondocente.css
@@ -13,18 +13,18 @@
     width: auto;
 }
 .dropdownmenu a {
-    background: #001660;
-    color: #FFFFFF;
-    display: block;
-    font: bold 12px/20px sans-serif;
-    padding: 10px 25px;
-    text-align: center;
-    text-decoration: none;
-    -webkit-transition: all .25s ease;
-    -moz-transition: all .25s ease;
-    -ms-transition: all .25s ease;
-    -o-transition: all .25s ease;
-    transition: all .25s ease;
+        background: #d0d0d0;
+        color: #000000;
+        display: block;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 15px 30px;
+        text-align: center;
+        text-decoration: none;
+        -webkit-transition: all .25s ease;
+        -moz-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+        -o-transition: all .25s ease;
+        transition: all .25s ease;
 }
 .dropdownmenu li:hover a {
     background: #ffffff;
