--- a/webapp/assets/css/info.css
+++ b/webapp/assets/css/info.css
@@ -14,11 +14,11 @@
     width: auto;
 }
 .dropdownmenu a {
-    background: #001660;
-    color: #FFFFFF;
+    background: #d0d0d0;
+    color: #000000;
     display: block;
-    font: bold 12px/20px sans-serif;
-    padding: 10px 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 15px 30px;
     text-align: center;
     text-decoration: none;
     -webkit-transition: all .25s ease;
