--- a/webapp/assets/css/styles.css
+++ b/webapp/assets/css/styles.css
@@ -164,13 +164,13 @@ nav {
 
 /* Cambia el color del enlace al pasar el cursor sobre él */
 .vertical-nav a:hover {
-  background-color: #0066ff;
+  background-color: #3A5A96;
   color: white;
 }
 
 /* Cambia el color del enlace al pasar el cursor sobre él */
 li a:hover {
-  background-color: #41538f;
+  background-color: #3A5A96;
   color: white;
 }
 
