--- a/webapp/assets/css/asistencia.css
+++ b/webapp/assets/css/asistencia.css
@@ -1,84 +1,7 @@
 .titulo {
-    font-size: 50px;
-    font-weight: bold;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    margin-left: 40%;
-  }
-
-  body {
-    background-color: #f8f9fa;
-  }
-  
-  .form-group select {
-    width: 25%; /* Cambié el ancho de los selects para hacerlos más pequeños */
-    margin: 10 auto;
-    display: block; 
+  font-size: 50px;
+  font-weight: bold;
+  margin: 30%;
 }
 
-  .card {
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
 
-  .extra-margin-top {
-    margin-top: 100px; /* Ajusta el valor según necesites */
-}
-  
-  .upload-area {
-    border: 2px dashed #6a6b76;
-    cursor: pointer;
-  }
-  
-  .upload-area:hover,
-  .upload-area:focus {
-    border: 2px solid #6a6b76;
-  }
-  
-  .upload-area-icon {
-    fill: #1cc972;
-    transition: transform 0.3s;
-  }
-  
-  .upload-area:hover .upload-area-icon,
-  .upload-area:focus .upload-area-icon {
-    transform: scale(1.2);
-  }
-  
-  .upload-area-title {
-    font-weight: bold;
-    color: #0d0f21;
-  }
-  
-  .upload-area-description {
-    color: #6a6b76;
-  }
-  
-  .upload-area-description strong {
-    color: #1cc972;
-  }
-  
-  .btn-danger {
-    background-color: #dc3545;
-    border-color: #dc3545;
-  }
-  
-  .btn-danger:hover {
-    background-color: #c82333;
-    border-color: #bd2130;
-  }
-  
-  .btn-success {
-    background-color: #28a745;
-    border-color: #28a745;
-  }
-  
-  .btn-success:hover {
-    background-color: #218838;
-    border-color: #1e7e34;
-  }
-  
-  
