--- a/webapp/assets/css/consultas.css
+++ b/webapp/assets/css/consultas.css
@@ -1,20 +1,23 @@
+body {
+    width: 100%;
+  }
+  
 .containercons {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
     width: 90%;
-    margin-top: 20px; /* Ajusta este valor para mover el contenido más hacia abajo */
     margin-bottom: 25px;
-    position: relative;
 }
 
 .tittle {
     font-size: 50px;
     font-weight: bold;
-    margin-bottom: 35px; 
-    margin-bottom: 35px;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    margin-left: 35%;
 }
 
 .select-margin {
