--- a/webapp/assets/css/info.css
+++ b/webapp/assets/css/info.css
@@ -72,38 +72,66 @@ li:hover ul#submenu {
 
 .card-title {
     margin-bottom: 10px;
-    font-size: 1.2rem; /* Aumenta el tamaño de la fuente para mejor legibilidad */
+    
     font-weight: bold;
 }
 
 .regresar {
-    width: 155px; /* Ancho fijo en pantallas más grandes */
-    height: 37px;
-    background: #41538F;
-    border-radius: 13px;
+    background-color: #41538F;
+    border: none;
     color: white;
-    margin-top: 30px;
-    margin-left: 30px;
-    display: inline-block;
+    padding: 10px 20px;
     text-align: center;
+    justify-content: center;
     text-decoration: none;
-    line-height: 37px;
-    transition: width 0.3s, margin-left 0.3s; /* Animación suave en los cambios */
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    
+    width: 155px; /* Ancho fijo en pantallas más grandes */
+    margin-top: 20px;
+    margin-left: 30px;
+    
+}
+.regresar:after {
+    content: "";
+    background-color: #001660;
+    position: absolute;
+    top: 35%;
+    left: 8%;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+
+.regresar:hover:after {
+    animation: ripple_401 1s ease-out;
+}
+
+@keyframes ripple_401 {
+    0% {
+        width: 5px;
+        height: 5px;
+        opacity: 1;
+    }
+
+    100% {
+        width: 200px;
+        height: 200px;
+        opacity: 0;
+    }
 }
 
 /* Ajusta el ancho del botón en pantallas más pequeñas */
 @media (max-width: 576px) {
-    .regresar {
+    .inscriptionbtn {
         width: 100%; /* Botón ocupa todo el ancho */
         margin-left: 0; /* Centra el botón */
         text-align: center;
     }
-}
-
-
-.regresar:hover {
-    color: rgb(245, 230, 212);
-    text-decoration: none;
 }
 
 
@@ -117,4 +145,56 @@ li:hover ul#submenu {
     padding: 10px 20px; /* Ajusta el padding para hacer el botón más pequeño */
     font-size: 0.9rem; /* Ajusta el tamaño de la fuente para que el botón sea más pequeño */
     margin-top: 60px;
+}
+
+/*Boton regresar e inscripcion*/
+.inscriptionbtn {
+    background-color: #41538F;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    position: relative;
+    overflow: hidden;
+}
+
+.inscriptionbtn:after {
+    content: "";
+    background-color: #001660;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+
+.inscriptionbtn:hover:after {
+    animation: ripple_401 1s ease-out;
+}
+
+@keyframes ripple_401 {
+    0% {
+        width: 5px;
+        height: 5px;
+        opacity: 1;
+    }
+
+    100% {
+        width: 200px;
+        height: 200px;
+        opacity: 0;
+    }
+}
+
+p{
+    font-size: 20px;
+    margin-bottom: 20px;
 }
