--- a/webapp/assets/css/material.css
+++ b/webapp/assets/css/material.css
@@ -1,4 +1,39 @@
+
+
+/* Estilo para las tarjetas */
 .card {
+    width: 90%;
+    max-width: 600px;
+    background-color: #FFF;
+    border-radius: .5rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .2);
+    padding: 1.5rem;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.card-body {
+    padding: 1.5rem;
+}
+
+/* Estilo para los títulos y líneas */
+.titulo {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.line {
+    width: 100%;
+    height: 2px;
+    background-color: #007bff; /* Ajusta el color de la línea si es necesario */
+    margin-bottom: 20px;
+}
+
+/*.card {
     width: 90%;
     max-width: 600px;
     background-color: #FFF;
@@ -8,7 +43,7 @@
     text-align: center;
     margin-bottom: 40px;
     margin-top: 40px;
-}
+}*/
 
 .upload-area {
     margin-top: 1.25rem;
@@ -62,4 +97,31 @@
     color: #FFF;
     background-color: var(--c-action-primary);
     border-color: var(--c-action-primary);
+}
+
+.btn-custom {
+    font-size: 1.25rem; 
+    padding: 0.75rem 1.5rem; 
+}
+
+.btn-custom:hover {
+    background-color: #007bff; 
+    border-color: #007bff;
+}
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start; /* O usa align-items: center; si quieres centrar verticalmente */
+    padding: 20px; /* Ajusta el padding según sea necesario */
+}
+
+.custom-card {
+    width: 100%;
+    max-width: 600px;
+    margin-top: 30px;
+    background-color: white;
+    box-shadow: none;
+    border: none;
+    padding: 2rem;
 }
