--- a/webapp/assets/css/asistencia.css
+++ b/webapp/assets/css/asistencia.css
@@ -1,7 +1,117 @@
 .titulo {
   font-size: 50px;
   font-weight: bold;
-  margin: 30%;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  margin-left: 35%;
 }
 
+.divider-line {
+  width: 100%;
+  height: 1px;
+  background: #C9C9C9;
+  margin: 20px 0;
+}
+
+table {
+  width: 100%;
+  max-width: 800px; /* Ajuste del ancho de la tabla */
+  margin-top: 20px;
+  border-radius: 5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.tabla {
+  margin-left: 20%;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.table-bordered th.name {
+  background-color: #002E60; 
+  color: white;
+  text-align: center;
+  width: 30%; 
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.table-bordered th.moodleuser {
+  background-color: #009475; 
+  color: white;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 15%; 
+}
+
+.table-bordered th.moodlepass {
+  background-color: #002E60; 
+  color: white;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 15%; 
+}
+
+.table-bordered th.evaluacion {
+  background-color: #009475; 
+  color: white;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 20%; 
+}
+
+.table-bordered th.coment {
+  background-color: #002E60; 
+  color: white;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 30%; 
+}
+
+.table-bordered th.edit {
+  background-color: #009475; 
+  color: white;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 30%; 
+}
+
+.table-bordered td {
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 5px;
+}
+
+.name,
+.moodleuser,
+.moodlepass,
+.evaluacion,
+.coment,
+.edit {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 13px;
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  word-wrap: break-word;
+}
+
+.calendar{
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  background-color: #fff;
+  color: #495057;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-align: left;
+
+}
 
